samples/_failures_safe/1761269973_3e5a35_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_aae045b8.c: In function ‘main’:
./samples/SAFE/__tmp_aae045b8.c:170:5: error: expected declaration or statement at end of input
  170 |     }
      |     ^
